fix: spacing

--- a/src/components/Landing/token-swap/freedom/freedom.module.scss
+++ b/src/components/Landing/token-swap/freedom/freedom.module.scss
@@ -40,7 +40,7 @@
     padding: 6.4rem 0 6rem;
 
     .left {
-      width: 59rem;
+      width: 64rem;
       margin: 0 0 4.8rem;
     }
 
